--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://yt3.ggpht.com/ytc/AKedOLRl-5VEMaWXlOBidFqu6UXRPmeT1QGV9JO70bS0hQ=s600-c-k-c0x00ffffff-no-rj-rp-mo" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="search-engine"
+      content="Om Ashish Soni's custom search engine"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>om's search engine</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
